--- a/airlines/templates/index.html
+++ b/airlines/templates/index.html
@@ -1,7 +1,6 @@
 {% load static %}
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
@@ -13,7 +12,6 @@
     <script src="{% static 'airlines/vendor/magnific-popup.js' %}"></script>
     <script src="{% static 'airlines/vendor/moment.js' %}"></script>
     <script src="{% static 'airlines/sortable-table.js' %}"></script>
-    <script src="{% static 'airlines/navigation.js' %}"></script>
     <script src="{% static 'airlines/header.js' %}"></script>
     <script src="{% static 'airlines/messages.js' %}"></script>
     <script src="{% static 'airlines/fetch.js' %}"></script>
@@ -29,11 +27,23 @@
     <link rel="stylesheet" href="{% static 'airlines/forms.css' %}">
     <link rel="stylesheet" href="{% static 'airlines/home.css' %}">
     <link rel="stylesheet" href="{% static 'airlines/crews-panel.css' %}">
+    <link rel="stylesheet" href="{% static 'airlines/test-results.css' %}">
     {% if content == 'crews-panel' %}
     <script src="{% static 'airlines/crews-panel.js' %}"></script>
     {% else %}
     <script src="{% static 'airlines/index.js' %}"></script>
     {% endif %}
+    <script>
+        var SERVER_STATUS_URL = '{{ server_status_url }}';
+    </script>
+    <link rel="stylesheet" href="{% static 'airlines/server-status.css' %}">
+
+
+
+    <script src="{% static 'channels/js/websocketbridge.js' %}"></script>
+
+
+    <script src="{% static 'airlines/server-status.js' %}"></script>
 </head>
 
 {% if content == 'home' %}
@@ -79,6 +89,9 @@
     {% if content == 'crews-panel' %}
     {% include "content/crews-panel.html" %}
     {% endif %}
+    {% if content == 'tests' %}
+    {% include "content/tests.html" %}
+    {% endif %}
 
 </main>
 
@@ -86,9 +99,6 @@
 
 {% include "navigation/messages.html" %}
 
-{% if user_auth %}
-{% include "sockets/server_status.html" %}
-{% endif %}
-
 </body>
 </html>
+
