--- a/airlines/templates/navigation/header.html
+++ b/airlines/templates/navigation/header.html
@@ -4,16 +4,12 @@
         {% if user_auth %}
         <figure class="real-time-status"></figure>
         Logged as <span class="username">{{ user_auth.username }}</span>
-        <a href="logout">
-            <button class="small loginButton">
-                Logout
-            </button>
+        <a href="logout" class="button small loginButton">
+            Logout
         </a>
         {% else %}
-        <a href="login">
-            <button class="small loginButton">
-                Login to system
-            </button>
+        <a href="login" class="button small loginButton">
+            Login to system
         </a>
         {% endif %}
     </nav>
@@ -31,6 +27,12 @@
             <a class="popup" href="data-generator-popup">
                 <i class="fas fa-cubes"></i>
                 Data generator
+            </a>
+        </li>
+        <li>
+            <a href="tests">
+                <i class="fas fa-cubes"></i>
+                Tests
             </a>
         </li>
         {% endif %}
