--- a/staticfiles/airlines/server-status.css
+++ b/staticfiles/airlines/server-status.css
@@ -1,7 +1,8 @@
 figure.real-time-status {
     font-size: 11px;
     float: left;
-    margin-top: 1.5vw;
+    position: relative;
+    top: -0.5vw;
 }
 
 figure .fa-asterisk {
