--- a/airlines/templates/content/crews-panel.html
+++ b/airlines/templates/content/crews-panel.html
@@ -1,12 +1,12 @@
 <nav class="subsections">
     <ul>
         <li>
-            <a href="crews">
+            <a href="/airlines/crews-panel/list/">
                 List
             </a>
         </li>
         <li class="active">
-            <a href="crews-panel">
+            <a href="/airlines/crews-panel/assign/">
                 Assign to flights
             </a>
         </li>
