--- a/airlines/templates/popups/admin.html
+++ b/airlines/templates/popups/admin.html
@@ -2,5 +2,5 @@
     <header>
         <i class="fas fa-cubes"></i> Django administrator
     </header>
-    <iframe src="../admin"></iframe>
+    <iframe src="/admin"></iframe>
 </figure>
