--- a/staticfiles/airlines/navigation.css
+++ b/staticfiles/airlines/navigation.css
@@ -136,3 +136,8 @@ button:hover, .button:hover {
     border: 2px solid #4c2b2e;
 }
 
+.button.backButton {
+    top: 3vw;
+    position: relative;
+}
+
