--- a/airlines/templates/popups/data-generator.html
+++ b/airlines/templates/popups/data-generator.html
@@ -2,5 +2,5 @@
     <header>
         <i class="fas fa-cubes"></i> Test data generator
     </header>
-    <iframe src="data-generator"></iframe>
+    <iframe src="/airlines/data-generator"></iframe>
 </figure>
